# urea-pricing-analysis

./: .gitignore  README.md  desafio_analise_ureia.md  exploratory_data_analysis.ipynb  exploratory_data_analysis_urea.ipynb  get_comtrade_data.ipynb  get_wits_data_webscrapping.ipynb  imports.ipynb  pyproject.toml
